--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,11 @@ h2     {
     color: darkviolet;
 }
 
+.bold    {
+    color: red;
+    font-size: 1.5rem
+}
+
 .boxBox    {
     display: flex;
 }
